# empty-contract

./: Cargo.toml  deploy_testnet.sh  example_instantiate_args.json  txhash.init.json  txhash.json
artifacts/: checksums.txt  contract.wasm
src/: contract.rs  lib.rs  msg.rs
